--- a/info.html
+++ b/info.html
@@ -8,25 +8,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="author" content="Schooltec"/>
     <meta name="title" content="Schooltec" >
-    <meta name="description" content="Aprende desarrollo web, Ofimatica y manejo de software a cualquier hora y en cualquier lugar."/>
+    <meta name="description" content="Aprende software de ingeniería, ofimática y diseño gráfico a cualquier hora y en cualquier lugar"/>
     <meta name="disribution" content="global"/>
-    <meta name="copyright" content="Copyright 2019 by Schooltec" />
-    <meta name="theme-color" content="#212121"/>
+    <meta name="copyright" content="Copyright 2020 by Schooltec" />
+    <meta name="theme-color" content="#e9e9e9"/>
     <!--###########################-->
     <!--Targetas de Twitter-->
     <meta name="twitter:title" content="Schooltec | Información"/>
-    <meta name="twitter:description" content="Aprende desarrollo web, Ofimatica y manejo de software a cualquier hora y en cualquier lugar."/>
+    <meta name="twitter:description" content="Aprende software de ingeniería, ofimática y diseño gráfico a cualquier hora y en cualquier lugar"/>
     <meta name="twitter:card" content="photo"/>
     <meta name="twitter:site" content="@schooltecnet"/>
-    <meta name="twitter:url" content="https://schooltec.net" />
+    <meta name="twitter:url" content="https://schooltec.net/info" />
     <meta name="twitter:image" content="https://schooltec.net/img/logoschooltec.png"/>
     <!--###################-->
     <!-- Open Graph data Facebook -->
     <meta property="og:title" content="Schooltec | Información"/>
-    <meta property="og:description" content="Aprende desarrollo web, Ofimatica y manejo de software a cualquier hora y en cualquier lugar."/>
+    <meta property="og:description" content="Aprende software de ingeniería, ofimática y diseño gráfico a cualquier hora y en cualquier lugar"/>
     <meta property="og:type" content="Article" />
     <meta property="og:site_name" content="Schooltec"/>
-    <meta property="og:url" content="https://schooltec.net/" />
+    <meta property="og:url" content="https://schooltec.net/info" />
     <meta property="og:image" content="https://schooltec.net/img/logoschooltec.png"/>
     <!--###########################-->
     <!--Fuentes, estylos, javascript y favicon-->
@@ -38,16 +38,17 @@
     <script src="js/main.js" data-turbolinks-track="true"></script>
     <!--#######################################-->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142474303-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170661233-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'UA-142474303-1');
+
+        gtag('config', 'UA-170661233-1');
     </script>
     <!--#################################################-->
 </head>
-<body style="background: rgb(77, 77, 82);">
+<body>
     <div id="user-data" class="absolute z-depth-2 white" data-open="false" data-turbolinks-permanent>
         <div>
             <nav>
@@ -65,11 +66,8 @@
                         <a href="blog.html">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Blog</li>
                         </a>
-                        <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
+                        <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F7KMH7482ZLU6&source=url">
                             <li class='top-space row middle-xs grey-hover lighten-3-hover'>Donate</li>
-                        </a>
-                        <a href="https://schooltec.net/info">
-                            <li class='top-space row middle-xs grey-hover lighten-3-hover'>Día</li>
                         </a>
                     </div>
                 </ul>
@@ -111,19 +109,14 @@
                                             <i class="icon-book"></i>
                                             <p class='no-margin be-small'>Blog</p>
                                         </li>
-                                    </a>  
-                                    <a class="hidden-xs" target="_blank"href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VD7YBBX93VH4L&source=url">
+                                    </a>
+                                    <a class="hidden-xs" target="_blank"href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F7KMH7482ZLU6&source=url">
                                         <li class='inline-block'>
                                             <i class="icon-gift"></i>
                                             <p class='no-margin be-small'>Donate</p>
                                         </li>
                                     </a>
-                                    <a class="hidden-xs" href="https://schooltec.net/info">
-                                        <li class='inline-block'>
-                                            <i class="icon-contrast"></i>
-                                            <p class='no-margin be-small'>Día</p>
-                                        </li>
-                                    </a> 
+
                                 </ul>
                             </div>
                         </div>
@@ -132,7 +125,7 @@
             </div>
         </div>
     </nav>
-    <header class='relative big-padding big-top-space white-text text-center' style="background-color: rgb(53, 54, 58);">
+    <header class='relative big-padding big-top-space white-text text-center' style='background-color: #80d8ff'>
         <h4 class="index001">Información</h4>
     </header>
     <div class='article-container'>
@@ -173,9 +166,9 @@
                                 <div class='box'>
                                     <p class='uppercase green-flat-text'>Cursos</p>
                                     <ul>
-                                        <li><a href="programacion.html">Programación</a></li>
+                                        <li><a href="ingenieria.html">Ingeniería</a></li>
                                         <li><a href="ofimatica.html">Ofimática</a></li>
-                                        <li><a href="software.html">Software</a></li>
+                                        <li><a href="diseñografico.html">Diseño</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -184,7 +177,7 @@
                                     <p class='uppercase green-flat-text'>Nosotros</p>
                                     <ul>
                                         <li><a href="equipo.html">Equipo</a></li>
-                                        <li><a target="_blank" href="https://m.me/schooltec"">Contacto</a></li>
+                                        <li><a target="_blank" href="https://m.me/schooltec">Contacto</a></li>
                                         <li><a href="info.html">Información</a></li>
                                     </ul>
                                 </div>
@@ -213,4 +206,5 @@
         </footer>
     </div>
 </body>
+
 </html>
