--- a/ofimatica.html
+++ b/ofimatica.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Schooltec | Cursos</title>
+    <title>Schooltec | Cursos - Ofimática</title>
     <!--Ceo y posicionamiento web-->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="author" content="Schooltec"/>
-    <meta name="title" content="Schooltec" >
     <meta name="description" content="Aprende software de ingeniería, ofimática y diseño gráfico a cualquier hora y en cualquier lugar"/>
     <meta name="disribution" content="global"/>
     <meta name="copyright" content="Copyright 2020 by Schooltec" />
     <meta name="theme-color" content="#e9e9e9"/>
     <!--###########################-->
     <!--Targetas de Twitter-->
-    <meta name="twitter:title" content="Schooltec"/>
-    <meta name="twitter:description" content="Aprende software de ingeniería ofimática y diseño gráfico a cualquier hora y en cualquier lugar"/>
+    <meta name="twitter:title" content="Schooltec | Cursos - Ofimática"/>
+    <meta name="twitter:description" content="Aprende software de ingeniería, ofimática y diseño gráfico a cualquier hora y en cualquier lugar"/>
     <meta name="twitter:card" content="photo"/>
     <meta name="twitter:site" content="@schooltecnet"/>
-    <meta name="twitter:url" content="https://schooltec.net/cursos" />
+    <meta name="twitter:url" content="https://schooltec.net/ofimatica" />
     <meta name="twitter:image" content="https://schooltec.net/img/postcursos.png"/>
     <!--###################-->
     <!-- Open Graph data Facebook -->
-    <meta property="og:title" content="Schooltec"/>
-    <meta property="og:description" content="Aprende software de ingeniería ofimática y diseño gráfico a cualquier hora y en cualquier lugar"/>
+    <meta property="og:title" content="Schooltec | Cursos - Ofimática"/>
+    <meta property="og:description" content="Aprende software de ingeniería, ofimática y diseño gráfico a cualquier hora y en cualquier lugar"/>
     <meta property="og:type" content="Article" />
     <meta property="og:site_name" content="Schooltec"/>
-    <meta property="og:url" content="https://schooltec.net/cursos" />
+    <meta property="og:url" content="https://schooltec.net/ofimatica" />
     <meta property="og:image" content="https://schooltec.net/img/postcursos.png"/>
-    <!--###########################--> 
+    <!--###########################-->
     <!--Fuentes, estylos, javascript y favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
     <link rel="stylesheet" media="all" href="css/stylos.css"/>
@@ -109,7 +108,7 @@
                                             <i class="icon-book"></i>
                                             <p class='no-margin be-small'>Blog</p>
                                         </li>
-                                    </a> 
+                                    </a>
                                     <a class="hidden-xs" target="_blank"href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F7KMH7482ZLU6&source=url">
                                         <li class='inline-block'>
                                             <i class="icon-gift"></i>
@@ -164,36 +163,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </article>
-                                                <article class='card col-course course no-padding premium relative text-left' data-category-ids=''>
-                                                    <div class='box'>
-                                                        <a href="">
-                                                            <a href="cursoautocad2d.html">
-                                                                <img class="imagendecursos" src="img/postcursoautocad.png" alt="">
-                                                            </a>
-                                                        </a>
-                                                    </div>
-                                                    <div class='white large-padding body'>
-                                                        <h2 class='black-text no-margin normal-line-height'>
-                                                            <a href="cursoautocad2d.html">Curso básico de Autodesk AutoCAD 2D</a>
-                                                        </h2>
-                                                        <div class='row bottom-xs'>
-                                                            <div class=' col-xs-6'>
-                                                                <div class='box'>
-                                                                    <div class='circle-avatar grey inline-block middle-block' style='width:20px;height:20px;'></div>
-                                                                    <span class='middle-block'>Gratuito</span>
-                                                                </div>
-                                                            </div>
-                                                            <div class='text-right col-xs-6' style='font-size:0.8em;'>
-                                                                <div class='box'>
-                                                                    <div id='add-course-75'>
-                                                                        <a class="waves-effect waves-teal btn-flat green-flat-text no-padding no-margin" style="font-size:1.2em;line-height:51px;" data-type="script" href="cursoautocad2d.html">Detalles</a>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </article>
+                                                </article>   
                                                 <article class='card col-course course no-padding premium relative text-left' data-category-ids=''>
                                                     <div class='box'>
                                                         <a href="">
@@ -222,36 +192,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </article>  
-                                                <article class='card col-course course no-padding premium relative text-left' data-category-ids=''>
-                                                    <div class='box'>
-                                                        <a href="">
-                                                            <a href="cursoilustrator.html">
-                                                                <img class="imagendecursos" src="img/postcursoilustrator.png" alt="">
-                                                            </a>
-                                                        </a>
-                                                    </div>
-                                                    <div class='white large-padding body'>
-                                                        <h2 class='black-text no-margin normal-line-height'>
-                                                            <a href="cursoilustrator.html">Curso completo de Adobe Ilustrator</a>
-                                                        </h2>
-                                                        <div class='row bottom-xs'>
-                                                            <div class=' col-xs-6'>
-                                                                <div class='box'>
-                                                                    <div class='circle-avatar grey inline-block middle-block' style='width:20px;height:20px;'></div>
-                                                                    <span class='middle-block'>Gratuito</span>
-                                                                </div>
-                                                            </div>
-                                                            <div class='text-right col-xs-6' style='font-size:0.8em;'>
-                                                                <div class='box'>
-                                                                    <div id='add-course-75'>
-                                                                        <a class="waves-effect waves-teal btn-flat green-flat-text no-padding no-margin" style="font-size:1.2em;line-height:51px;" data-type="script" href="cursoilustrator.html">Detalles</a>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </article>                                                                      
+                                                </article>                                                                        
                                             </div>
                                         </div>
                                     </div>
